# ExoWorld

./: Cargo.toml
apps/backend/: Cargo.toml
apps/backend/src/: main.rs
apps/backend/src/components/: acceleration.rs  entity_id.rs  mod.rs  position.rs  velocity.rs
apps/backend/src/resources/: config.rs  engine_stats.rs  mod.rs  quadtree.rs  stats.rs  time.rs
apps/backend/src/systems/: accumulate_frame_stats.rs  calculate_stats.rs  log_stats.rs  log_stats_system.rs  mod.rs  movement.rs  spawn_entities.rs  update_position.rs
apps/backend/src/utils/: mod.rs  runner.rs  schedules.rs  tps_tracker.rs
crates/stdb/: Cargo.toml
